# jira_stats

./: .gitignore  README.md  config.yaml.template  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jira_stats/: __init__.py  __main__.py  analyser.py  cli.py  database.py  jira_importer.py
tests/: importer_test.py
